Style, fix append, replace Integer instantiation